--- a/css/style.css
+++ b/css/style.css
@@ -209,12 +209,12 @@ html, body, .wrapper{
     font-weight: 900;
     text-transform: uppercase;
 }
-.titie-section h1:before{
+/*.titie-section h1:before{
     content: "";
     width: 165px;
     display: block;
     height: 3px;
-    background:#1abc9c;
+    background:#0E0E0E;
     position: absolute;
     bottom: -16px;
     margin: 0 auto;
@@ -226,7 +226,7 @@ html, body, .wrapper{
     width: 165px;
     display: block;
     height: 3px;
-    background:#1abc9c;
+    background:#0E0E0E;
     position: absolute;
     bottom: -30px;
     margin: 0 auto;
@@ -244,7 +244,7 @@ html, body, .wrapper{
     margin: 0 auto;
     left: 0;
     right: 0;
-}
+}*/
 
 .titie-section.white h1:before{
     content: "";
@@ -292,7 +292,7 @@ html, body, .wrapper{
 .header-top-section{
     display: block;
     width: 100%;
-    background: #1abc9c;
+    background: #0E0E0E;
     color: #fff;
 }
 
@@ -476,6 +476,7 @@ span.shoping-cart {
 .slider-section{
     display: block;
     width: 100%;
+    height: 100%;
     position: relative;
     overflow: hidden;
 }
@@ -511,7 +512,7 @@ span.shoping-cart {
 }
 .carousel-inner .item img{}
 .carousel-inner .item .carousel-caption{
-    top: 30%;
+    top: 20%;
     z-index: 999;
 }
 .carousel-inner .item .carousel-caption h2{
@@ -576,7 +577,7 @@ a.carousel-control.left, a.carousel-control.right{
     background: #46bfa9;
     text-align: center;
     position: absolute;
-    top: 45%;
+    top: 30%;
     border: none;
     display: block;
     text-align: center;
@@ -661,7 +662,7 @@ a.carousel-control.right > span{
 }
 .product-item{
     position: relative;
-    margin-top: 30px;
+    margin-top: 100px;
     transition: all 0.5s
 }
 .product-item img{
@@ -689,7 +690,7 @@ a.carousel-control.right > span{
 
 .product-meta{
     display: block;
-    margin-top: 35%;
+    margin-top: 40%;
 
 }
 
@@ -744,7 +745,7 @@ a.carousel-control.right > span{
     color: #fff;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 12px;
     float: left;
     padding: 10px;
     padding-left: 15px;
@@ -757,7 +758,7 @@ a.carousel-control.right > span{
     color: #fff;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 12px;
     padding: 10px;
 }
 
