--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ span.shoping-cart {
 .slider-section{
     display: block;
     width: 100%;
-    height: 100%;
+    height: 85%;
     position: relative;
     overflow: hidden;
 }
@@ -494,7 +494,7 @@ span.shoping-cart {
 .slider-section img{
     display: block;
     width: 100%;
-    height: auto;
+    height: 50%;
 }
 .carousel-inner{
     position: relative;
@@ -1417,6 +1417,9 @@ footer.footer p a{
      .product-hover a {
         padding: 2%;
     }
+
+
+
     a.carousel-control.left, a.carousel-control.right{
         width: 70px;
         height: 70px;
@@ -1508,9 +1511,16 @@ footer.footer p a{
 
 }
 @media (max-width: 620px){
+
+
     .header-top-content ul li a{
         font-size: 12px;
     }
+
+    .slider-section{
+        height: 30%;
+    }
+
     .header-top-menu ul li a{
         font-size: 12px;
     }
@@ -1528,7 +1538,7 @@ footer.footer p a{
         left: -11px;
     }
     .carousel-inner .item .carousel-caption h2, .carousel-inner .item .carousel-caption h3{
-        font-size: 14px;
+        font-size: 18px;
     }
     .carousel-inner .item .carousel-caption a{
         padding: 2px 10px;
