--- a/css/style.css
+++ b/css/style.css
@@ -1517,7 +1517,10 @@ footer.footer p a{
     }
 
     .slider-section{
-        height: 30%;
+        height: 35%;
+    }
+    .new-section{
+      
     }
 
     .header-top-menu ul li a{
