--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ a.carousel-control.right > span{
     NEW PRODUCR SECTION
  */
 .new-section{
-    background: #e9f0fd;
+    background: #fff;
     display: block;
     padding: 100px 0 80px;
 }
@@ -1520,7 +1520,7 @@ footer.footer p a{
         height: 35%;
     }
     .new-section{
-      
+
     }
 
     .header-top-menu ul li a{
