--- a/css/style.css
+++ b/css/style.css
@@ -630,7 +630,7 @@ a.carousel-control.right > span{
     padding: 100px 0 80px;
 }
 .service-item{}
-  
+
 .service-item i{
     font-size: 70px;
     text-align: center;
@@ -741,12 +741,12 @@ a.carousel-control.right > span{
 .product-title h3{
     margin: 0;
     padding: 0;
-    text-align: left;
+    text-align: center;
     color: #fff;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 12px;
-    float: left;
+    /* float: left; */
     padding: 10px;
     padding-left: 15px;
 }
@@ -1541,7 +1541,7 @@ footer.footer p a{
         left: -11px;
     }
     .carousel-inner .item .carousel-caption h2, .carousel-inner .item .carousel-caption h3{
-        font-size: 18px;
+        font-size: 22px;
     }
     .carousel-inner .item .carousel-caption a{
         padding: 2px 10px;
