--- a/css/style.css
+++ b/css/style.css
@@ -480,16 +480,6 @@ span.shoping-cart {
     position: relative;
     overflow: hidden;
 }
-/*.slider-section:before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: block;
-    background: rgba(0, 0, 0, 0.52);
-    z-index: 9
-}*/
 
 .slider-section img{
     display: block;
@@ -1522,6 +1512,10 @@ footer.footer p a{
 
     .slider-section{
         height: 35%;
+    }
+
+    .slider-section img{
+        height: 100%;
     }
 
     .header-top-menu ul li a{
