корзина в шапку, плагин шрифтов

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ ul.navbar-nav li.active a, ul.navbar-nav li a:hover{
 }
 ul.navbar-nav.cart-menu li a{
     padding-right: 0;
-    color: #0f0101;
+    color: #179858;
     font-weight: 700;
 }
 ul.navbar-nav.cart-menu li a .fa-search{
