--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ span.shoping-cart {
 }
 .carousel-inner .item img{}
 .carousel-inner .item .carousel-caption{
-    top: 20%;
+    top: 10%;
     z-index: 999;
 }
 .carousel-inner .item .carousel-caption h2{
@@ -1512,7 +1512,7 @@ footer.footer p a{
         font-size: 15px;
     }
     .contact-section{
-      background: url(../images/map-bg.png) #2d3237 no-repeat;
+      background: url(../images/map2.jpg) #2d3237 no-repeat;
     }
     .blog-item p{
         font-size: 12px;
